--- a/locales/en/tableFields.json
+++ b/locales/en/tableFields.json
@@ -788,5 +788,9 @@
     "product": "Product",
     "system": "System",
     "version": "Version"
+  },
+  "hostKbidFields": {
+    "kbid": "KBID",
+    "exposedDevices": "Exposed Devices"
   }
 }
