--- a/locales/zh/connections.json
+++ b/locales/zh/connections.json
@@ -458,6 +458,7 @@
     "txt-report-nccst": "回報NCCST",
     "txt-report-kbid": "回報KBID",
     "txt-kbid": "KBID",
+    "txt-kbidName": "KBID名稱",
     "txt-exposedDevices": "資產數量",
     "txt-report-nccst-success": "回報成功",
     "txt-report-nccst-fail": "回報失敗",
