Continue working on the filter for Host Dashboard KBID page.

--- a/locales/en/tableFields.json
+++ b/locales/en/tableFields.json
@@ -791,6 +791,7 @@
   },
   "hostKbidFields": {
     "kbid": "KBID",
-    "exposedDevices": "Exposed Devices"
+    "exposedDevices": "Exposed Devices",
+    "departmentArray": "Department"
   }
 }
