Complete the new Host KBID page.

--- a/locales/en/tableFields.json
+++ b/locales/en/tableFields.json
@@ -792,6 +792,6 @@
   "hostKbidFields": {
     "kbid": "KBID",
     "exposedDevices": "Exposed Devices",
-    "departmentArray": "Department"
+    "departmentSelected": "Department"
   }
 }
