--- a/locales/zh/connections.json
+++ b/locales/zh/connections.json
@@ -408,9 +408,11 @@
       "txt-relatedSoftwareCount": "相關軟體數量",
       "txt-group": "群組",
       "txt-hostName": "主機名稱",
+      "txt-hostNameOrIp": "主機名稱或IP",
       "txt-daysOpen": "已存在天數",
       "txt-system": "作業系統",
       "txt-ip": "IP",
+      "txt-departmentName": "部門",
       "txt-vulnerabilityDesc": "漏洞描述",
       "txt-name": "名稱",
       "txt-severity": "等級",
