--- a/locales/zh/tableFields.json
+++ b/locales/zh/tableFields.json
@@ -792,6 +792,6 @@
   "hostKbidFields": {
     "kbid": "KBID",
     "exposedDevices": "裝置數量",
-    "departmentArray": "部門"
+    "departmentSelected": "部門"
   }
 }
