--- a/locales/en/connections.json
+++ b/locales/en/connections.json
@@ -408,9 +408,11 @@
       "txt-relatedSoftwareCount": "Related Software Count",
       "txt-group": "Group",
       "txt-hostName": "Host Name",
+      "txt-hostNameOrIp": "Host Name or IP",
       "txt-daysOpen": "Days Open",
       "txt-system": "System",
       "txt-ip": "IP",
+      "txt-departmentName": "Department",
       "txt-vulnerabilityDesc": "Vulnerability description",
       "txt-name": "Name",
       "txt-severity": "Severity",
