Add department filter for Host Dashboard and Inventory page. Fix bug for SOC Incident page.

--- a/locales/en/tableFields.json
+++ b/locales/en/tableFields.json
@@ -769,6 +769,7 @@
     "swEdition": "Software Edition",
     "targetSw": "Target Software",
     "targetHw": "Target Hardware",
+    "departmentSelected": "Department",
     "other": "Other",
     "cpe23uri": "CPE Name",
     "productCpename": "Product Name",
@@ -784,6 +785,7 @@
     "relatedSoftware": "Related Software",
     "daysOpen": "Days Open",
     "exposedDevices": "Exposed Devices Count",
+    "departmentSelected": "Department",
     "cpeKey": "CPE Key",
     "product": "Product",
     "system": "System",
