--- a/locales/zh/tableFields.json
+++ b/locales/zh/tableFields.json
@@ -769,6 +769,7 @@
     "swEdition": "軟體版本",
     "targetSw": "目標軟體",
     "targetHw": "目標硬體",
+    "departmentSelected": "部門",
     "other": "其他",
     "cpe23uri": "CPE名稱",
     "productCpename": "產品名稱",
@@ -784,6 +785,7 @@
     "relatedSoftware": "相關軟體",
     "daysOpen": "已存在天數",
     "exposedDevices": "暴露裝置數量",
+    "departmentSelected": "部門",
     "cpeKey": "CPE Key",
     "product": "產品",
     "system": "系統",
