Make System filter as tree items for Inventory and KBID page.

--- a/locales/en/tableFields.json
+++ b/locales/en/tableFields.json
@@ -794,6 +794,7 @@
   "hostKbidFields": {
     "kbid": "KBID",
     "exposedDevices": "Exposed Devices",
-    "departmentSelected": "Department"
+    "departmentSelected": "Department",
+    "system": "System"
   }
 }
