Complete making filter query as component for new Host pages.

--- a/locales/en/tableFields.json
+++ b/locales/en/tableFields.json
@@ -776,7 +776,8 @@
     "isMatched": "Matched",
     "system": "System",
     "vulnerabilityNum": "Vulnerability Number",
-    "exposedDevices": "Exposed Devices Count"
+    "exposedDevices": "Exposed Devices Count",
+    "safetyScanInfo": "cpe23Uri"
   },
   "hostDashboardFields": {
     "cveId": "Name",
