--- a/locales/zh/errors.json
+++ b/locales/zh/errors.json
@@ -55,6 +55,9 @@
   "-1014": "此帳號不存在",
   "-1015": "寄信失敗",
   "-1016": "帳號已停用",
+  "-1017": "驗證碼錯誤",
+  "-1018": "請填入驗證碼",
+  "-1019": "新用戶請設定密碼",
 
   "-2001": "目標未明",
   "-2002": "已到期",
