Rename Host Dashboard page and add various IDs for E2E test purpose.

--- a/locales/en/connections.json
+++ b/locales/en/connections.json
@@ -395,8 +395,10 @@
   "host": {
     "txt-hostList": "Host List",
     "txt-cpePage": "CPE",
-    "txt-dashboard": "Dashboard",
-    "dashboard": {
+    "txt-vulnerabilities": "Vulnerabilities",
+    "txt-inventory": "Inventory",
+    "txt-kbid": "KBID",
+    "vulnerabilities": {
       "txt-severityLevelQuery": "Vulnerability Exposure Level",
       "txt-monthlySeverityTrend": "Monthly Vulnerability Level Trend",
       "txt-vulnerabilityList": "Vulnerability List",
