--- a/locales/zh/connections.json
+++ b/locales/zh/connections.json
@@ -475,6 +475,8 @@
     "txt-report-nccst-fail": "回報失敗",
     "txt-uploadMergedCpe": "上傳合併CPE",
     "txt-downloadMergedCpe": "下載合併CPE",
+    "txt-uploadMergedKbid": "上傳合併KBID",
+    "txt-downloadMergedKbid": "下載合併KBID",
     "txt-vansRecord": "回報歷程",
     "txt-vansConfigOID": "機關OID",
     "txt-vansConfigUnitName": "機關名稱",
