Implement api for Host Endpoints memos.

--- a/locales/en/connections.json
+++ b/locales/en/connections.json
@@ -162,10 +162,10 @@
   "txt-indicator": "Indicator",
   "txt-online": "Online",
   "txt-offline": "Offline",
+  "txt-inActivate": "Inactivate",
   "txt-connected": "Connected",
   "txt-disconnected": "Disconnected",
   "txt-notConnected": "Not Connected",
-  "txt-notSetup": "Not Installed",
   "txt-unstable": "Unstable",
   "txt-unknown": "Unknown",
   "txt-severity": "Severity",
