--- a/locales/zh/connections.json
+++ b/locales/zh/connections.json
@@ -61,7 +61,7 @@
   "txt-seatName": "座位名稱",
   "txt-service": "服務",
   "txt-number": "數字",
-  "txt-memo": "註記",
+  "txt-memo": "備註",
   "txt-info": "資訊",
   "txt-name": "名稱",
   "txt-cancel": "取消",
@@ -162,10 +162,10 @@
   "txt-indicator": "Indicator",
   "txt-online": "連線",
   "txt-offline": "離線",
+  "txt-inActivate": "未安裝",
   "txt-connected": "已連線",
   "txt-disconnected": "已離線",
   "txt-notConnected": "未連線",
-  "txt-notSetup": "未安裝",
   "txt-unstable": "不穩定",
   "txt-unknown": "未知",
   "txt-severity": "嚴重等級",
