feat(pattern): add switch to enable pattern

--- a/locales/zh/connections.json
+++ b/locales/zh/connections.json
@@ -727,6 +727,7 @@
       "txt-addSOCScript": "定義自動化事件單條件",
       "txt-enableSOCScript": "啟用自動化事件單條件",
       "txt-enableIncidentTemplate": "事件單範本建立",
+      "txt-isEnabled": "是否啟用",
       "txt-public": "共用",
       "txt-patternQuery1": "統整",
       "txt-patternQuery2": "分鐘資料，超過或等於",
