--- a/locales/zh/tableFields.json
+++ b/locales/zh/tableFields.json
@@ -670,7 +670,9 @@
     "threshold": "臨界值",
     "lastUpdateDttm": "資料最近更新時間",
     "queryScript": "查詢條件",
-    "severity": "嚴重等級"
+    "severity": "嚴重等級",
+    "isDetection": "啟用",
+    "enabledStatus": "啟用狀態"
   },
   "threatsTableFields": {
     "threatText": "情資內容",
