fix(pattern): add language in english

--- a/locales/en/connections.json
+++ b/locales/en/connections.json
@@ -727,6 +727,7 @@
       "txt-addSOCScript": "Custom SOC Incident Template",
       "txt-enableSOCScript": "Enable SOC Incident Template",
       "txt-enableIncidentTemplate": "Enable Incident Template",
+      "txt-isEnabled": "Enabled",
       "txt-public": "Public",
       "txt-patternQuery1": "In",
       "txt-patternQuery2": "minutes, alert occurs more than or equal to",
