--- a/locales/en/tableFields.json
+++ b/locales/en/tableFields.json
@@ -678,6 +678,7 @@
     "threatText": "Threat Info",
     "threatType": "threat Type",
     "dataSourceType": "Threat Severity Type",
+    "updateDttm": "Update Datetime",
     "createDttm": "Create Datetime"
   },
   "soarFields": {
