--- a/locales/zh/connections.json
+++ b/locales/zh/connections.json
@@ -55,6 +55,7 @@
   "txt-upload": "上傳",
   "txt-uploadStatus": "上傳狀態",
   "txt-uploadSuccess": "上傳成功",
+  "txt-uploadWhitelistSuccess": "上傳成功，總上傳筆數：{{uploadCount}}，新增筆數：{{insertCount}}，重複筆數：{{duplicateCount}}",
   "txt-uploadFailed": "上傳失敗: 格式錯誤",
   "txt-uploadEmpty": "無資料上傳",
   "txt-seat": "座位",
@@ -1158,6 +1159,7 @@
     "txt-terminate": "停用",
     "txt-serverOs": "Server使用系統",
     "txt-pcOs": "PC使用系統",
+    "txt-scanFileWhitelist": "Malware白名單",
     "scan-list": {
       "txt-dashboard": "Dashboard",
       "txt-yara": "Yara Scan",
@@ -1360,6 +1362,7 @@
   },
   "payloadsFields": {
     "timestamp": "日期",
+    "hbDttm": "HB時間",
     "vpnName": "VPN名稱",
     "channel": "Channel",
     "attacksCount": "告警數量",
