Add an expandable list at the bottom to show Pattern alert messages.

--- a/locales/en/connections.json
+++ b/locales/en/connections.json
@@ -55,6 +55,7 @@
   "txt-upload": "Upload",
   "txt-uploadStatus": "Upload Status",
   "txt-uploadSuccess": "Upload Success",
+  "txt-uploadWhitelistSuccess": "Total Uploaded: {{uploadCount}}\nInserted: {{insertCount}}\nDuplicated: {{duplicateCount}}",
   "txt-uploadFailed": "Upload Failed: incorrect file format",
   "txt-uploadEmpty": "No data to upload",
   "txt-seat": "Seat",
@@ -175,7 +176,7 @@
   "txt-severity": "Severity",
   "txt-subnet": "Subnet",
   "txt-data": "Data",
-  "txt-selectFile": "Please select file",
+  "txt-selectFile": "Select File",
   "txt-destIp": "Destination IP",
   "txt-destPort": "Destination Port",
   "txt-configSource": "Config Source",
@@ -675,6 +676,7 @@
     "txt-last50": "Recent 50",
     "txt-threatStat": "Threat Statistic",
     "txt-eventStat": "Event Statistic",
+    "txt-event": "Events",
     "txt-queryMore": "Query",
     "txt-queryEvents": "View Details Infomation",
     "txt-queryMoreEvents": "View other records",
@@ -1159,6 +1161,7 @@
     "txt-serverSystem": "Server",
     "txt-pcSystem": "PC",
     "txt-scanFileWhitelist": "Malware Whitelist",
+    "txt-whitelistSize": "Current Whitelist Size",
     "scan-list": {
       "txt-dashboard": "Dashboard",
       "txt-yara": "Yara Scan",
