--- a/locales/zh/connections.json
+++ b/locales/zh/connections.json
@@ -55,7 +55,7 @@
   "txt-upload": "上傳",
   "txt-uploadStatus": "上傳狀態",
   "txt-uploadSuccess": "上傳成功",
-  "txt-uploadWhitelistSuccess": "上傳成功，總上傳筆數：{{uploadCount}}，新增筆數：{{insertCount}}，重複筆數：{{duplicateCount}}",
+  "txt-uploadWhitelistSuccess": "總上傳筆數：{{uploadCount}}\n新增筆數：{{insertCount}}\n重複筆數：{{duplicateCount}}",
   "txt-uploadFailed": "上傳失敗: 格式錯誤",
   "txt-uploadEmpty": "無資料上傳",
   "txt-seat": "座位",
@@ -676,6 +676,7 @@
     "txt-last50": "最近50次",
     "txt-threatStat": "告警統計",
     "txt-eventStat": "日誌統計",
+    "txt-event": "日誌",
     "txt-queryMore": "查詢更多",
     "txt-queryEvents": "查看詳細資料",
     "txt-queryMoreEvents": "檢查其它告警紀錄",
@@ -1160,6 +1161,7 @@
     "txt-serverOs": "Server使用系統",
     "txt-pcOs": "PC使用系統",
     "txt-scanFileWhitelist": "Malware白名單",
+    "txt-whitelistSize": "當前白名單數量",
     "scan-list": {
       "txt-dashboard": "Dashboard",
       "txt-yara": "Yara Scan",
